tests/artifacts/ingress-tls-healthy.out

Ingress/web -n test1, created 1m ago, gen:1
  Current: Resource is current
  Service port doesnt exist: Service/web:80 referenced in ingress, but Service doesn't have that port defined.

Service/web -n test1
  Current: Service is ready
  Missing Endpoint: Service has no matching endpoint.

Secret/gateway-tls -n test1, created 1m ago
  Certificate for CN=example.com · issued by CN=Test CA
    Also valid for: gateway.example.com
    Valid 1m ago, expires 2126-06-10
    Key: RSA · serial 712137069015432309918504661311928280986348109454
