tests/artifacts/ingress-tls-healthy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  generation: 1
  name: web
  namespace: test1
  resourceVersion: "460300"
  uid: 3d7ed81f-e2a6-46bc-84dd-8a2b99511daa
spec:
  rules:
  - host: gateway.example.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - gateway.example.com
    secretName: gateway-tls
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: test1
spec:
  ports:
  - port: 80
    name: http
---
apiVersion: v1
kind: Secret
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  name: gateway-tls
  namespace: test1
  resourceVersion: "2880"
  uid: b435653a-2de9-4020-a816-f4e16013a011
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHakNDQWdLZ0F3SUJBZ0lVZkwxVW9oalNFYVN0SXNuSVVJQlFGK0NqUG80d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0VqRVFNQTRHQTFVRUF3d0hWR1Z6ZENCRFFUQWdGdzB5TmpBM01EUXlNVE16TVRKYUdBOHlNVEkyTURZeApNREl4TXpNeE1sb3dGakVVTUJJR0ExVUVBd3dMWlhoaGJYQnNaUzVqYjIwd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFES1o5K2NhUzZLQ05rZExaQ0p1djRNNnF6ME5DbHNCWXhPLzFocy9Fek0KNzhzWWdWZ1VZQU5lUFNEajBNM0tpQlIvazF5d0k5UU13c2JMMHhIQkFMak85YUk4UUJQdWpta2R3cEFPZ0g2UAp5dFlrLzNMSGNWNG1ZZ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRREtaOStjYVM2S0NOa2QKTFpDSnV2NE02cXowTkNsc0JZeE8vMWhzL0V6TTc4c1lnVmdVWUFOZVBTRGowTTNLaUJSL2sxeXdJOVFNd3NiTAoweEhCQUxqTzlhSThRQlB1am1rZHdwQU9nSDZQeXRZay8zTEhjVjRtWWZnL3hiTnAxa2x6dU1vMXJVYmtGMVo2CnQxYzFkbmRYY3M0QjNieldCbkhncTBQKzFLUFdHdVhNTG5WRnZqbTkxdDd5WVRzMFNHM0E5TUl2U3EwMCtFaFUKbnJVWjFyUE5OVWdjcTBKemw1VjlkQjFHcXA2b2lHeDI4aVNZanZaNTZUZERHdExCN1ZwZFU2b011TFFpcGY3bwpzd2tJd1JTK3hJcWp1Q [...]
